166816227-feature(role, user): access control functionality     - add user role migration     - update user model     - add changeRole controller     - add changeRole route     - add middleware for admin     - add validation for roles     - add tests     - add documentation  [Delivers #166816227]
